
define([AC_CACHE_LOAD], )dnl
define([AC_CACHE_SAVE], )dnl

AC_INIT(vsn.mk)

AC_CONFIG_AUX_DIRS(${ERL_TOP}/erts/autoconf)

if test "X$host" != "Xfree_source" -a "X$host" != "Xwin32"; then
    AC_CANONICAL_HOST
else
    host_os=win32
fi


dnl ----------------------------------------------------------------------
dnl Checks for programs.
dnl ----------------------------------------------------------------------


AC_CHECK_PROG(PERL, perl, perl, no_perl)
if test "$PERL" = no_perl; then
  AC_MSG_ERROR([Perl is required to generate v2 to v1 mib converter script])
fi


AC_OUTPUT(mibs/Makefile:mibs/Makefile.in)

